[gd_scene load_steps=68 format=3 uid="uid://c2dfb4hwnxkoh"]

[ext_resource type="Texture2D" uid="uid://oya0226unej" path="res://Assets/AnimatedKnightFree/Idle.png" id="1_5suvo"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_roegp"]
[ext_resource type="Texture2D" uid="uid://bbdlgjcenplet" path="res://Assets/AnimatedKnightFree/Attacks.png" id="2_dy05x"]
[ext_resource type="Texture2D" uid="uid://c4o3a4l33cfjx" path="res://Assets/AnimatedKnightFree/Run.png" id="3_5j23q"]
[ext_resource type="Texture2D" uid="uid://feml15tfdhrh" path="res://Assets/AnimatedKnightFree/Death.png" id="3_y0ml6"]
[ext_resource type="Texture2D" uid="uid://dfob75kqw5se4" path="res://Assets/AnimatedKnightFree/Jump.png" id="3_yuprg"]
[ext_resource type="Texture2D" uid="uid://vo1h855wexjv" path="res://Assets/AnimatedKnightFree/Hurt.png" id="4_hto0i"]
[ext_resource type="Script" path="res://Scripts/Hitbox.gd" id="6_x5wng"]
[ext_resource type="PackedScene" uid="uid://ds5huedhd5fyk" path="res://Scenes/player_health_ui.tscn" id="7_hyj5a"]
[ext_resource type="Script" path="res://Scripts/Hurtbox.gd" id="8_hr8bs"]
[ext_resource type="PackedScene" uid="uid://doi6jh3c3dqsv" path="res://Scenes/you_died_screen.tscn" id="11_a21rv"]
[ext_resource type="PackedScene" uid="uid://c77faaobgjb0l" path="res://Scenes/player_xp.tscn" id="11_lsjfq"]
[ext_resource type="PackedScene" uid="uid://bnypwwha1y5jc" path="res://Scenes/currency_counter.tscn" id="12_2y6ke"]
[ext_resource type="PackedScene" uid="uid://73vs4avh7c1n" path="res://Scenes/pause_menu.tscn" id="12_ids1c"]
[ext_resource type="FontFile" uid="uid://f3uao3iptwlp" path="res://Assets/fonts/PixelOperator8.ttf" id="13_21vof"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j4hg1"]
atlas = ExtResource("2_dy05x")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgqop"]
atlas = ExtResource("2_dy05x")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wb7m"]
atlas = ExtResource("2_dy05x")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wakrb"]
atlas = ExtResource("2_dy05x")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n818e"]
atlas = ExtResource("2_dy05x")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywb7b"]
atlas = ExtResource("2_dy05x")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsc8a"]
atlas = ExtResource("2_dy05x")
region = Rect2(896, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewy3v"]
atlas = ExtResource("2_dy05x")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukaqv"]
atlas = ExtResource("2_dy05x")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_700kx"]
atlas = ExtResource("2_dy05x")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4bl6"]
atlas = ExtResource("3_y0ml6")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgc1j"]
atlas = ExtResource("3_y0ml6")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqan0"]
atlas = ExtResource("3_y0ml6")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_syon6"]
atlas = ExtResource("3_y0ml6")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyyie"]
atlas = ExtResource("4_hto0i")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipx0d"]
atlas = ExtResource("4_hto0i")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr4j3"]
atlas = ExtResource("4_hto0i")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce3dv"]
atlas = ExtResource("1_5suvo")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rpvp"]
atlas = ExtResource("1_5suvo")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oixhs"]
atlas = ExtResource("1_5suvo")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja1pe"]
atlas = ExtResource("1_5suvo")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m3pn"]
atlas = ExtResource("1_5suvo")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2ari"]
atlas = ExtResource("1_5suvo")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m3kh"]
atlas = ExtResource("1_5suvo")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdbjn"]
atlas = ExtResource("1_5suvo")
region = Rect2(128, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5maw"]
atlas = ExtResource("3_yuprg")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbhn0"]
atlas = ExtResource("3_yuprg")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_te177"]
atlas = ExtResource("3_yuprg")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_myme2"]
atlas = ExtResource("3_yuprg")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khj42"]
atlas = ExtResource("3_yuprg")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdht2"]
atlas = ExtResource("3_yuprg")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfg3c"]
atlas = ExtResource("3_yuprg")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qagp"]
atlas = ExtResource("3_yuprg")
region = Rect2(128, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn4np"]
atlas = ExtResource("3_5j23q")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv1ll"]
atlas = ExtResource("3_5j23q")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ei1m"]
atlas = ExtResource("3_5j23q")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t308"]
atlas = ExtResource("3_5j23q")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yel8l"]
atlas = ExtResource("3_5j23q")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dufg"]
atlas = ExtResource("3_5j23q")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbx87"]
atlas = ExtResource("3_5j23q")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_omumo"]
atlas = ExtResource("3_5j23q")
region = Rect2(128, 192, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bgoc3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4hg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgqop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wb7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wakrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n818e")
}],
"loop": false,
"name": &"Attack",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywb7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsc8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewy3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukaqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_700kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_700kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_700kx")
}],
"loop": false,
"name": &"Attack2",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4bl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgc1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqan0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syon6")
}],
"loop": false,
"name": &"Die",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyyie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipx0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr4j3")
}],
"loop": false,
"name": &"GetHit",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce3dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rpvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oixhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja1pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m3pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2ari")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m3kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdbjn")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5maw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbhn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te177")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myme2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khj42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdht2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfg3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qagp")
}],
"loop": false,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn4np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv1ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ei1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t308")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yel8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dufg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbx87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omumo")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sh24w"]
radius = 8.0
height = 42.0

[sub_resource type="Animation" id="Animation_orbhi"]
resource_name = "AttackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Hitbox/CollisionShape2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-41, 21)]
}

[sub_resource type="Animation" id="Animation_baggp"]
resource_name = "AttackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Hitbox/CollisionShape2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 21)]
}

[sub_resource type="Animation" id="Animation_jbef4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Hitbox/CollisionShape2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 21)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1adk"]
_data = {
"AttackLeft": SubResource("Animation_orbhi"),
"AttackRight": SubResource("Animation_baggp"),
"RESET": SubResource("Animation_jbef4")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_knpuq"]
radius = 12.0
height = 47.0

[sub_resource type="Animation" id="Animation_g5tp1"]
resource_name = "LevelUp"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/LevelUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(502.667, 55), Vector2(502.667, 55), Vector2(502.667, 55), Vector2(502.667, 35)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/LevelUp:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_543g0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/LevelUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(502.667, 35)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/LevelUp:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1jmw"]
_data = {
"LevelUp": SubResource("Animation_g5tp1"),
"RESET": SubResource("Animation_543g0")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eudm8"]
radius = 8.0
height = 42.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 5
position = Vector2(-3, 0)
collision_layer = 2
script = ExtResource("1_roegp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
process_mode = 3
texture_filter = 1
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_bgoc3")
animation = &"Attack"
autoplay = "Idle"
frame = 1

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(1, -21)
collision_layer = 0
collision_mask = 4
script = ExtResource("8_hr8bs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_sh24w")

[node name="ComboTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v1adk")
}

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1, -21)

[node name="Hitbox" type="Area2D" parent="Marker2D"]
position = Vector2(-1, 21)
collision_layer = 8
collision_mask = 0
script = ExtResource("6_x5wng")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/Hitbox"]
position = Vector2(20, -21)
rotation = 3.14159
shape = SubResource("CapsuleShape2D_knpuq")
disabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHealth" parent="CanvasLayer" instance=ExtResource("7_hyj5a")]
z_index = 3
offset_top = 35.0
offset_bottom = 47.0

[node name="PlayerXP" parent="CanvasLayer" instance=ExtResource("11_lsjfq")]

[node name="CurrencyCounter" parent="CanvasLayer" instance=ExtResource("12_2y6ke")]

[node name="LevelUp" type="Label" parent="CanvasLayer"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.333
offset_top = 55.0
offset_right = 42.667
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.862745, 0.756863, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_21vof")
theme_override_font_sizes/font_size = 16
text = "LEVEL UP!"

[node name="level_animate" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_v1jmw")
}

[node name="GetHitTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_eudm8")

[node name="InvulTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Transition" type="CanvasLayer" parent="."]

[node name="YouDiedScreen" parent="Transition" instance=ExtResource("11_a21rv")]
process_mode = 3
position = Vector2(-4, 8)

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="DashEffect" type="Timer" parent="."]
wait_time = 0.066

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Pause Menu" parent="CanvasLayer2" instance=ExtResource("12_ids1c")]
offset_left = -3.0
offset_right = -3.0

[connection signal="received_damage" from="Hurtbox" to="." method="_on_hurtbox_received_damage"]
[connection signal="timeout" from="ComboTimer" to="." method="_on_combo_timer_timeout"]
[connection signal="done_healing" from="CanvasLayer/PlayerHealth" to="." method="_on_player_health_done_healing"]
[connection signal="done_smoothing" from="CanvasLayer/PlayerHealth" to="." method="_on_player_health_done_smoothing"]
[connection signal="move_damage" from="CanvasLayer/PlayerHealth" to="." method="_on_player_health_move_damage"]
[connection signal="level_noti" from="CanvasLayer/PlayerXP" to="." method="_on_player_xp_level_noti"]
[connection signal="timeout" from="GetHitTimer" to="." method="_on_get_hit_timer_timeout"]
[connection signal="timeout" from="InvulTimer" to="." method="_on_invul_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="DashEffect" to="." method="_on_dash_effect_timeout"]
